--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
 asgiref==3.3.1
 Django==3.1.5
+django-debug-toolbar==3.2
 django-multiselectfield==0.1.12
 djangorestframework==3.12.2
 Pillow==8.1.0
 pytz==2020.5
+reportlab==3.5.59
 sqlparse==0.4.1
