--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -14,8 +14,8 @@ services:
       - ./.env
 
   web:
-    build: .
-#    image: dzanto/foodgram
+#    build: .
+    image: dzanto/foodgram
     restart: always
     volumes:
       - static_volume:/code/static
