add media volume in docker-compose.yaml

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -19,6 +19,7 @@ services:
     restart: always
     volumes:
       - static_volume:/code/static
+      - media_volume:/code/media
     expose:
       - 8000
     depends_on:
