--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -3,6 +3,7 @@ version: '3.8'
 volumes:
   postgres_data:
   static_volume:
+  media_volume:
 
 services:
 
@@ -14,7 +15,6 @@ services:
       - ./.env
 
   web:
-#    build: .
     image: dzanto/foodgram
     restart: always
     volumes:
