--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,8 @@
 asgiref==3.3.1
 Django==3.1.5
+django-environ==0.4.5
 djangorestframework==3.12.2
 Pillow==8.1.0
 pytz==2020.5
 reportlab==3.5.59
 sqlparse==0.4.1
-gunicorn==20.0.4
-psycopg2-binary==2.8.5
